fix: [FFM-4010]: Breaking on words that are too long, in flag variation value (#10153)

--- a/src/modules/75-cf/components/FlagActivation/FlagActivationDetails.module.scss
+++ b/src/modules/75-cf/components/FlagActivation/FlagActivationDetails.module.scss
@@ -104,4 +104,5 @@
   background: var(--grey-50) !important;
   border-radius: 4px;
   color: var(--grey-400) !important;
+  word-break: break-word !important;
 }
